--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmFg0WYhwDq5L4xU3iVyKYauHJU3OjBTY" >
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="drawer-hook"></div>
     <div id="backdrop-hook"></div>
+    <div id="modal-hook"></div>
+    <div id="drawer-hook"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
