--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
     <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmFg0WYhwDq5L4xU3iVyKYauHJU3OjBTY" >
+    src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%" >
 </script>
   </head>
   <body>
